--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Miami Best Buidlers</title>
-    <link rel="stylesheet" href="main.css"> <!-- Link to CSS file for styling -->
+    <link rel="stylesheet" href="styles.css"> <!-- Link to CSS file for styling -->
 </head>
 
 <body>
