styling ig image

--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,7 @@
         <p class="footer-copyright">&copy; 2023 MIAMI BEST BUILDERS. All Rights Reserved.</p>
         <div class="footer-social">
             <a href="https://www.facebook.com"><img src="Images/fb.png" alt="Facebook"></a>
-            <a href="https://www.instagram.com"><img src="Images/ig.png" alt="Instagram"></a>
+            <a href="https://www.instagram.com"><img src="Images/IG.png" alt="Instagram"></a>
             <a href="https://www.youtube.com"><img src="Images/YT.png" alt="YouTube"></a>
         </div>
     </footer>
