--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <header>
         
         <div class="header-column logo">
-            <img src="logo.png" alt="Company Logo">
+            <img src="Images/Logo/MBB_2.png" alt="Company Logo">
         </div>
         <div class="header-column navigation">
             <nav>
