--- a/src/index.html
+++ b/src/index.html
@@ -141,8 +141,9 @@
 
     <footer>
         <div class="footer-logo">
-            <img src="logo-footer.png" alt="Logo">
+            <img src="Images/Logo/MBB.png" alt="Logo">
         </div>
+
         <div class="footer-contact">
             <h4>Opening Hours: </h4>
             <p>Monday - Friday<br>9am - 6pm</p>
