added project showcase image

--- a/src/index.html
+++ b/src/index.html
@@ -81,17 +81,17 @@
         </p>
         
         <div class="service">
-            <img src="Images/Residential-Construction.jpg" alt="Service 1">
+            <img src="Images/Services/Residential-Construction.jpg" alt="Service 1">
             <h3>Residential Construction</h3>
             <p>From cozy homes to luxury estates...</p>
         </div>
         <div class="service">
-            <img src="Images/Commercial-Construction.jpg" alt="Service 2">
+            <img src="Images/Services/Commercial-Construction.jpg" alt="Service 2">
             <h3>Commercial Projects</h3>
             <p>the demands of commercial construction...</p>
         </div>
         <div class="service">
-            <img src="Images/Renovation&Remodeling.JPG" alt="Service 3">
+            <img src="Images/Services/Renovation&Remodeling.JPG" alt="Service 3">
             <h3>Renovation & Remodeling</h3>
             <p>Give your existing space a fresh look...</p>
         </div>
@@ -116,8 +116,8 @@
 
     <section id="project-showcase">
         <h2>Project Showcase</h2>
-        <img src="project1.jpg" alt="Project 1">
-        <img src="project2.jpg" alt="Project 2">
+        <img src="Images/Gallery/work01.png" alt="Project 1">
+        <img src="Images/Gallery/work02.png" alt="Project 2">
         <img src="project3.jpg" alt="Project 3">
     </section>
 
@@ -155,9 +155,9 @@
         </div>
         <p class="footer-copyright">&copy; 2023 MIAMI BEST BUILDERS. All Rights Reserved.</p>
         <div class="footer-social">
-            <a href="https://www.facebook.com"><img src="Images/fb.png" alt="Facebook"></a>
-            <a href="https://www.instagram.com"><img src="Images/IG.png" alt="Instagram"></a>
-            <a href="https://www.youtube.com"><img src="Images/YT.png" alt="YouTube"></a>
+            <a href="https://www.facebook.com"><img src="Images/SocialMedia/fb.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com"><img src="Images/SocialMedia/IG.png" alt="Instagram"></a>
+            <a href="https://www.youtube.com"><img src="Images/SocialMedia/YT.png" alt="YouTube"></a>
         </div>
     </footer>
 
