--- a/src/index.html
+++ b/src/index.html
@@ -118,7 +118,7 @@
         <h2>Project Showcase</h2>
         <img src="Images/Gallery/work01.png" alt="Project 1">
         <img src="Images/Gallery/work02.png" alt="Project 2">
-        <img src="project3.jpg" alt="Project 3">
+        <img src="Images/Gallery/work03.png" alt="Project 3">
     </section>
 
     <section id="contact">
