--- a/src/index.html
+++ b/src/index.html
@@ -119,6 +119,7 @@
         <img src="Images/Gallery/work01.png" alt="Project 1">
         <img src="Images/Gallery/work02.png" alt="Project 2">
         <img src="Images/Gallery/work03.png" alt="Project 3">
+        <img src="Images/Gallery/work04.png" alt="Project 3">
     </section>
 
     <section id="contact">
