break in header

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,8 @@
             <img src="Images/Logo/MBB_2.png" alt="Company Logo">
         </div>
         
+        <br>
+
         <div class="header-column navigation">
             <nav>
                 <ul class="nav-links1">
@@ -32,8 +34,10 @@
             </nav>
         </div>
         
+        <br>
+
         <div class="header-column contact">
-            <p>Call Now: 786-477-0560</p>
+            <p>Call Now: <br> 786-477-0560</p>
         </div>
   
     </header>
