--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <!--Required meta tags-->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -92,7 +92,7 @@
         <div class="service">
             <img src="Images/Services/Commercial-Construction.jpg" alt="Service 2">
             <h3>Commercial Projects</h3>
-            <p>the demands of commercial construction...</p>
+            <p>commercial construction</p>
         </div>
         <div class="service">
             <img src="Images/Services/Renovation&Remodeling.JPG" alt="Service 3">
@@ -107,7 +107,7 @@
 
         <p> 
             Situated in the vibrant city of Miami, Florida, we take pride in offering our services locally within the Sunshine State. Miami Best Builders is dedicated to bringing our expertise and unwavering dedication to clients seeking top-notch solutions.
-        </p>
+        </p> <br>
 
         <ul>
             <li>Expert Team</li>
